--- a/index.html
+++ b/index.html
@@ -8,18 +8,55 @@
   </head>
   <body>
     <nav>
-      <div>
-        <p>
-          Ship your projects to Play to Xcode. Integrate with external data
-          using Fetch.
-        </p>
-        <div class="framer">
+      <div class="nav__wrapper">
+        <div>
+          <p>
+            Ship your projects to Play to Xcode. Integrate with external data
+            using Fetch.
+          </p>
+          <div class="framer"></div>
+          <a href="/">Learn More</a>
         </div>
-        <a href="/">Learn More</a>
-      </div>
-      <div class="nav__bar">
-        <div class="nav__logo--container">
-            <img src="https://framerusercontent.com/modules/DKiKQEf3YL5FXh6xO46l/YsfBwpMPFk04NRykpSmM/assets/55mPZUOanW3JrVod1vSYqJNVuI.png" alt="play logo">
+        <div class="nav__bar">
+          <div class="nav__logo--container">
+            <img
+              src="https://framerusercontent.com/modules/DKiKQEf3YL5FXh6xO46l/YsfBwpMPFk04NRykpSmM/assets/55mPZUOanW3JrVod1vSYqJNVuI.png"
+              alt="play logo"
+              class="nav__logo--img"
+            />
+          </div>
+          <ul class="nav__links">
+            <li>
+              <a href="" class="nav__link"
+                >Play to Xcode
+                <img
+                  src="https://framerusercontent.com/images/TUGFi79Oij5M12TiJe7vgCJy8.png"
+                  alt=""
+                  class="nav__link--arrow"
+              /></a>
+            </li>
+            <li>
+              <a href="" class="nav__link"
+                >Use Cases
+                <img
+                  src="https://framerusercontent.com/images/TUGFi79Oij5M12TiJe7vgCJy8.png"
+                  alt=""
+                  class="nav__link--arrow"
+              /></a>
+            </li>
+            <li>
+              <a href="" class="nav__link"
+                >Support
+                <img
+                  src="https://framerusercontent.com/images/TUGFi79Oij5M12TiJe7vgCJy8.png"
+                  alt=""
+                  class="nav__link--arrow"
+              /></a>
+            </li>
+            <li><a href="" class="nav__link">Compare </a></li>
+            <li><a href="" class="nav__link">Blog </a></li>
+            <li><a href="" class="nav__link">Pricing </a></li>
+          </ul>
         </div>
       </div>
     </nav>
