finished the header and nav

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
   <body>
     <nav>
       <div class="nav__wrapper">
-        <div>
-          <p>
+        <div class="nav__message">
+          <p class="nav__message--text">
             Ship your projects to Play to Xcode. Integrate with external data
             using Fetch.
           </p>
           <div class="framer"></div>
-          <a href="/">Learn More</a>
+          <a href="/" class="nav__learn-more">Learn More</a>
         </div>
         <div class="nav__bar">
           <div class="nav__logo--container">
@@ -57,8 +57,52 @@
             <li><a href="" class="nav__link">Blog </a></li>
             <li><a href="" class="nav__link">Pricing </a></li>
           </ul>
+          <div class="nav__buttons">
+            <button class="nav__button--1">Book a Demo</button>
+            <button class="nav__button--2">Get Started For Free</button>
+          </div>
         </div>
       </div>
     </nav>
+    <header>
+      <div class="header__wrapper">
+        <h1 class="header__h1">
+          The most powerful tool to design and ship your apps.
+        </h1>
+        <p class="header__para gray">
+          Play is a collaborative tool that lets you design, prototype, and ship
+          your apps.
+        </p>
+        <button class="header__button">Get Started for Free</button>
+      </div>
+    </header>
+    <main>
+      <div class="main__wrapper">
+        <section class="main__video--w--desc">
+          <video class="main__video" controls>
+            <source src="./assets/fillerVideo.mp4" class="main__video" />
+          </video>
+          <div class="main__video--description">
+            <div class="main__desc--title">
+              <h2 class="main__desc--title--text albert--sans">
+                Play to <span class="blue--gradient">Xcode</span>
+              </h2>
+                <div class="beta--symbol albert--sans">BETA</div>
+            </div>
+            <h2 class="main__desc--para albert--sans">
+              Ship your projects in Play to the App Store and seamlessly
+              integrate Play components, pages, and styles with existing code.
+            </h2>
+            <a href="" class="arrow--link albert--sans"
+              >Learn More
+              <img
+                src="https://framerusercontent.com/images/Bffcav4qFpA2jY1YpoyBeU154.png"
+                alt=""
+                class="arrow"
+            /></a>
+          </div>
+        </section>
+      </div>
+    </main>
   </body>
 </html>
