finished with section 2.

--- a/index.html
+++ b/index.html
@@ -116,20 +116,190 @@
           <div class="section2__content">
             <div class="section2__content--description">
               <span class="section2__content--title albert--sans"></span>
-              <span class="section2__content--para albert--sans"
-                ></span
-              >
+              <span class="section2__content--para albert--sans"></span>
             </div>
             <video class="section2__video video" loop muted playsinline>
-              <source src="./assets/fillerVideo2.mp4" id="section2__video--source"/>
+              <source
+                src="./assets/fillerVideo2.mp4"
+                id="section2__video--source"
+              />
             </video>
             <figure class="section2__content--phone">
-              <img src="https://framerusercontent.com/images/vEbkNTuqJbHt5mWbkITTtkqfruk.png?scale-down-to=1024" class="section2__content--phone" alt="">
+              <img
+                src="https://framerusercontent.com/images/vEbkNTuqJbHt5mWbkITTtkqfruk.png?scale-down-to=1024"
+                class="section2__content--phone"
+                alt=""
+              />
             </figure>
             <div class="section2__phone--video--container">
               <video class="phone__video video" loop muted playsinline>
-                <source src="./assets/fillerVideo3.mp4" id="phone__video--source">
+                <source
+                  src="./assets/fillerVideo3.mp4"
+                  id="phone__video--source"
+                />
               </video>
+            </div>
+          </div>
+          <div class="section2__carousel">
+            <span class="section2__carousel--title"
+              >Loved by designers & engineers at the world’s best product
+              teams.</span
+            >
+            <div class="section2__carousel--wheel">
+              <div class="section2__carousel--frame">
+                <div class="fader1"></div>
+                <div class="fader2"></div>
+              </div>
+              <ul class="logo--list">
+                <li class="logo--list--item ">
+                  <img
+                    src="https://framerusercontent.com/images/BbLtKwquQE7BOKouED1rHFPLHbY.png?scale-down-to=512"
+                    alt=""
+                    class="carousel__item openAI"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/eZ7CtEb6n1u2J49KWUnNDzBVCZM.png?scale-down-to=512"
+                    alt=""
+                    class="carousel__item airBnb"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/6dHQTBiTAoZB1TuDPatNHDVu4LE.png?scale-down-to=512"
+                    alt=""
+                    class="carousel__item netflix"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/5S0imCz1b0IgU0SeE1CUksbZ8.png"
+                    alt=""
+                    class="carousel__item dLogo"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/AAZJqfGZnhCaTS46KNmEMfBLDU.png"
+                    alt=""
+                    class="carousel__item pLogo"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/4icwEhELkEJygXU2kS0FTWbDDs.png"
+                    alt=""
+                    class="carousel__item cred"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/PdnvPFZS2XUR0x2ZTGbHwl4xq8.png"
+                    alt=""
+                    class="carousel__item pinterest"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/45DxXESvXWo1OiBjw5NQ8uasYc.png"
+                    alt=""
+                    class="carousel__item snapchat"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/99H4HwrmWzbDsQTXhXPufaH62FM.png"
+                    alt=""
+                    class="carousel__item pal"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/neoYpjUWYfyD0etv9BJjgPDES0.png"
+                    alt=""
+                    class="carousel__item hims"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/K6IJi47RNBILrzihXPa5HLosHhI.png"
+                    alt=""
+                    class="carousel__item spotify"
+                  />
+                </li>
+                <li class="logo--list--item ">
+                  <img
+                    src="https://framerusercontent.com/images/BbLtKwquQE7BOKouED1rHFPLHbY.png?scale-down-to=512"
+                    alt=""
+                    class="carousel__item openAI"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/eZ7CtEb6n1u2J49KWUnNDzBVCZM.png?scale-down-to=512"
+                    alt=""
+                    class="carousel__item airBnb"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/6dHQTBiTAoZB1TuDPatNHDVu4LE.png?scale-down-to=512"
+                    alt=""
+                    class="carousel__item netflix"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/5S0imCz1b0IgU0SeE1CUksbZ8.png"
+                    alt=""
+                    class="carousel__item dLogo"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/AAZJqfGZnhCaTS46KNmEMfBLDU.png"
+                    alt=""
+                    class="carousel__item pLogo"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/4icwEhELkEJygXU2kS0FTWbDDs.png"
+                    alt=""
+                    class="carousel__item cred"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/PdnvPFZS2XUR0x2ZTGbHwl4xq8.png"
+                    alt=""
+                    class="carousel__item pinterest"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/45DxXESvXWo1OiBjw5NQ8uasYc.png"
+                    alt=""
+                    class="carousel__item snapchat"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/99H4HwrmWzbDsQTXhXPufaH62FM.png"
+                    alt=""
+                    class="carousel__item pal"
+                  />
+                </li>
+                <li class="logo--list--item">
+                  <img
+                    src="https://framerusercontent.com/images/neoYpjUWYfyD0etv9BJjgPDES0.png"
+                    alt=""
+                    class="carousel__item hims"
+                  />
+                </li>
+              </ul>
+              
             </div>
           </div>
         </section>
