finished with section 2

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="fader2"></div>
               </div>
               <ul class="logo--list">
-                <li class="logo--list--item ">
+                <li class="logo--list--item">
                   <img
                     src="https://framerusercontent.com/images/BbLtKwquQE7BOKouED1rHFPLHbY.png?scale-down-to=512"
                     alt=""
@@ -228,7 +228,7 @@
                     class="carousel__item spotify"
                   />
                 </li>
-                <li class="logo--list--item ">
+                <li class="logo--list--item">
                   <img
                     src="https://framerusercontent.com/images/BbLtKwquQE7BOKouED1rHFPLHbY.png?scale-down-to=512"
                     alt=""
@@ -299,9 +299,11 @@
                   />
                 </li>
               </ul>
-              
             </div>
           </div>
+        </section>
+        <section>
+          <h1>test</h1>
         </section>
       </div>
     </main>
